--- a/Team.html
+++ b/Team.html
@@ -12,7 +12,22 @@
     
     <a href="Team.html">Team</a>
   </div>
-  <h1>Meet the Team</h1>
-  <!-- Add your content here -->
+  <div class="centered-content">
+    <h1>Meet the Team</h1>
+        
+    <h2>About us</h2>
+    <div class="mechanic">
+      <p>We are a team of 8 students from the University of Tübingen. We are studying Informatik and this is our first game project. We are very excited to present our game to you and hope you enjoy it.</p>
+      <img src="mechanicGifs/example-1-5244.gif">
+    </div>
+
+    <h2>About us</h2>
+    <div class="mechanic">
+      <p>In our development team, we have organised ourselves via GitHub to work on new functions. We created issues to track specific tasks and improvements. These issues served as a central point of contact for discussions, planning and tracking our progress.
+        <br> We met once a week to discuss features. We also played the game ourselves a lot to make sure it was fun to play.
+        For the final polish, we let friends play the game and listened to feet feedback on what we could do better.</p>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
